RESOLVED FIXED87195
REGRESSION(r92695, r112399): insertHTML doesn't respect current selection range and inserts HTML to incorrect position
https://bugs.webkit.org/show_bug.cgi?id=87195
Summary REGRESSION(r92695, r112399): insertHTML doesn't respect current selection ran...
jaroslav.benc
Reported 2012-05-22 18:41:48 PDT
Copy / paste text as described in the attached example Note that this breaks web-based editors using insertHTML to paste text from clipboard (safe paste) We have observed it on the DEV channel for some time, now it's in the BETA channel but not in the STABLE. Observed in Chrome 20 (BETA) and reported here - https://code.google.com/p/chromium/issues/detail?id=129283
Attachments
Text case - copy/paste text in the editable area as described in the example (632 bytes, text/html)
2012-05-22 18:42 PDT, jaroslav.benc
no flags
Fixes the bug (4.47 KB, patch)
2012-05-24 16:28 PDT, Ryosuke Niwa
no flags
jaroslav.benc
Comment 1 2012-05-22 18:42:49 PDT
Created attachment 143431 [details] Text case - copy/paste text in the editable area as described in the example
Alexey Proskuryakov
Comment 2 2012-05-23 15:42:16 PDT
Could you please mentioned which editors are broken, and describe what goes wrong in those? The results in the test case are quite dramatic, is this what happens on actual sites too?
Alexey Proskuryakov
Comment 3 2012-05-23 15:51:03 PDT
I have a fairly long range: <http://trac.webkit.org/log/trunk/?rev=112406&stop_rev=112382> Perhaps <http://trac.webkit.org/changeset/112389> "Selectively retrieve text content around a given position" or <http://trac.webkit.org/changeset/112399> "An extra line break is inserted when pasting into a font element"?
Alexey Proskuryakov
Comment 4 2012-05-23 15:51:22 PDT
Alexey Proskuryakov
Comment 5 2012-05-23 15:53:22 PDT
There latter seems more likely, of course.
Ryosuke Niwa
Comment 6 2012-05-23 16:03:11 PDT
Yi Shen
Comment 7 2012-05-24 06:42:49 PDT
I will look at it. (In reply to comment #6) > It's likely http://trac.webkit.org/changeset/112399.
Ryosuke Niwa
Comment 8 2012-05-24 15:36:28 PDT
This regression came from the combination of r92695 and r112399. It's a very sneaky bug.
Ryosuke Niwa
Comment 9 2012-05-24 16:28:07 PDT
Created attachment 143918 [details] Fixes the bug
Ryosuke Niwa
Comment 10 2012-05-24 16:40:00 PDT
That was quick. Thanks!
Yi Shen
Comment 11 2012-05-24 17:28:05 PDT
Thanks for fixing it. Sorry I didn't get a chance to work on it during the day, and was about to look at it with my son tonight, then I saw your fix :-) Thanks again! (In reply to comment #10) > That was quick. Thanks!
WebKit Review Bot
Comment 12 2012-05-24 17:29:10 PDT
Comment on attachment 143918 [details] Fixes the bug Clearing flags on attachment: 143918 Committed r118449: <http://trac.webkit.org/changeset/118449>
WebKit Review Bot
Comment 13 2012-05-24 17:29:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.