REGRESSION (r112399): insertHTML doesn't respect current selection range and inserts HTML to incorrect position https://bugs.webkit.org/show_bug.cgi?id=87195

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by our passing insertionPos.anchorNode() to splitTreeToNode's start node even when
the position's type was an offset in a container. Fixed the bug by passing the node after the insert position
or the container node if the position is at the end of the container.

Test: editing/pasteboard/paste-at-end-of-node-followed-by-inline-element.html

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::doApply):

LayoutTests:

Add a regression test.

* editing/pasteboard/paste-at-end-of-node-followed-by-inline-element-expected.txt: Added.
* editing/pasteboard/paste-at-end-of-node-followed-by-inline-element.html: Added.


Canonical link: https://commits.webkit.org/105203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118449 268f45cc-cd09-0410-ab3c-d52691b4dbfc